# ccp_linear_model

./: .gitignore  CMakeCache.txt  README.md  cpp_inference_net.py  dataloader.py  inference_net.py  model.py  train_net.py
checkpoints/: weight.pth
cpp/: CMakeLists.txt  inference.cpp
data/: crawl.py
